@@ -1,6 +1,9 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+    New features:
+
+    * ->filter_isa - filter by object classes
 
 0.017     2017-05-31 23:14:01+08:00 Asia/Kuala_Lumpur
     No new features.
